2000-05-09  Christopher James Lahey  <clahey@helixcode.com>

	* Makefile.am: Removed folder-browser-factory.h since it doesn't
	exist.  Added mail-display.h, mail-types.h, pixmaps.h.

2000-05-09  Matt Loper  <matt@helixcode.com>

	* folder-browser-factory.c (control_activate): Remove "File->mail"
	menuitem.

	* mail-config.c (mail_config_druid): Fill in "blah blah blah".

2000-05-09  Dan Winship  <danw@helixcode.com>

	* folder-browser.c (folder_browser_load_folder): make this a
	little less kludgy. Use gnome_error_dialog rather than printf on
	errors.

	* mail-ops.c (fetch_mail): Fix to work with the new shell stuff...
	sorta. Will need more fixing later when the new shell framework is
	more done.

	* mail-config.c (finish): Call gnome_config_sync so the data
	actually gets written.

2000-05-08  Dan Winship  <danw@helixcode.com>

	* mail-display.c (save_data_cb):
	(on_url_requested): Update for CamelStream CamelException changes.

	* mail-format.c: Pass NULL for a CamelException in a bunch of
	places... the user will see that the data is not being displayed,
	and there's not a lot we can do, and none of these things should
	be failing anyway. Maybe fix this later.

2000-05-07  NotZed  <NotZed@HelixCode.com>

	* message-list.c (ml_value_at): Size moved to message info, rather
	than content info structure.

2000-05-07  Dan Winship  <danw@helixcode.com>

	* message-list.c (select_msg): unref the message after displaying
	it.

	* mail-format.c (get_data_wrapper_text):
	(handle_text_plain_flowed): 
	(handle_via_bonobo): Replace camel_stream_close calls.

2000-05-07  Matt Loper  <matt@helixcode.com>

	* folder-browser-factory.c: Changed a toolbar button from saying
	"New mail" (which suggests you might be composing new mail) to
	"Get mail".

2000-05-06  Dan Winship  <danw@helixcode.com>

	* folder-browser-factory.c (folder_browser_factory): Don't
	hardcode "inbox" here.

	* folder-browser.c (folder_browser_set_uri): Don't hardcode
	"inbox" here either.