@@ -1,3 +1,8 @@
+2000-05-10  Larry Ewing  <lewing@helixcode.com>
+
+	* mail-config.c (html_new): only set the default background color
+	if style is not NULL.
+
 2000-05-09  Christopher James Lahey  <clahey@helixcode.com>
 
 	* Makefile.am: Removed folder-browser-factory.h since it doesn't
